# Yolov8_TensorRT_CMake

./: README.md
tensorrt_pred_cpp/: CMakeLists.txt  main.cpp
tensorrt_pred_cpp/include/: common.hpp  filesystem.hpp  yolov8.hpp
train_export/: armor.yaml  train_export.py
